# memory_condense

./: .gitignore  arch_instructions.md  pixi.toml  pyproject.toml
examples/: similarity_demo.py
src/memory_condense/: __init__.py  _tokenizer.py  chunker.py  condenser.py  db.py  embedding.py  loader.py  retrieval.py  schemas.py  transcript_store.py
src/memory_condense/eval/: __init__.py  __main__.py  judge.py  report.py  responder.py  runner.py  schemas.py  sweep.py
tests/: conftest.py  test_chunker.py  test_embedding.py  test_eval_judge.py  test_eval_responder.py  test_eval_runner.py  test_eval_schemas.py  test_eval_sweep.py  test_integration.py  test_loader.py  test_retrieval.py  test_schemas.py  test_transcript_store.py
