[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory_condense"
version = "0.1.0"
description = "Long-term memory condensation system for LLM conversations"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3",
    "FlagEmbedding>=1.2",
    "hnswlib>=0.8",
    "pysbd>=0.3",
    "litellm>=1.40",
    "tiktoken>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/memory_condense"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that require model download (deselect with '-m \"not slow\"')",
]
